57: Fix issue on mobile for marki

--- a/themes/profumo-labo/_dev/css/theme/layout/_header.scss
+++ b/themes/profumo-labo/_dev/css/theme/layout/_header.scss
@@ -481,6 +481,26 @@
   display: none !important;
 }
 
+.drogeria-btn{
+  text-align: center;
+  display: block;
+  border: 1px solid #000;
+  text-transform: uppercase;
+  font-size: 12px !important;
+  font-weight: 300;
+  padding: 1px;
+}
+
+.drogeria-btn:hover{
+  border: 1px solid #CCB48F;
+}
+
+.three-column-list{
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+}
+
 @media screen and (max-width: 1520px){
   .header__mega-menu .mm_menus_ul .mm_menus_li .mm_columns_li{
     max-width: 200px;
@@ -779,6 +799,25 @@
   }
 }
 
+@media screen and (min-width: 992px){
+  .header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li{
+    max-width: 330px;
+  }
+  
+  .header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li:first-child{
+    border-right: 0;
+  }
+  
+  .header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li:first-child .mm_blocks_ul .mm_blocks_li:nth-child(2){
+    text-align: center;
+    font-weight: 500;
+    line-height: 18px;
+    color: #000;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
 @media screen and (min-width: 1200px){
   .header__nav-search-mobile{
     display: none !important;
@@ -787,41 +826,4 @@
   .header__nav .header-top__link.search-toggler{
     display: none !important;
   }
-}
-
-.drogeria-btn{
-  text-align: center;
-  display: block;
-  border: 1px solid #000;
-  text-transform: uppercase;
-  font-size: 12px !important;
-  font-weight: 300;
-  padding: 1px;
-}
-
-.drogeria-btn:hover{
-  border: 1px solid #CCB48F;
-}
-
-.three-column-list{
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-}
-
-.header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li{
-  max-width: 330px;
-}
-
-.header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li:first-child{
-  border-right: 0;
-}
-
-.header__mega-menu .mm_menus_ul .mm_menus_li.mega-menu-header-marki .mm_columns_li:first-child .mm_blocks_ul .mm_blocks_li:nth-child(2){
-  text-align: center;
-  font-weight: 500;
-  line-height: 18px;
-  color: #000;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
